Updating some stuff to latest status

--- a/main.tex
+++ b/main.tex
@@ -2,12 +2,11 @@
 
 \sethyphenation[variant=british]{english}{} % Add words between the {} to avoid them to be cut
 
-\renewcommand{\baselinestretch}{1.2} 
+\renewcommand{\baselinestretch}{1.2}
 
 \begin{document}
 
 \header{Ryan }{Liu}           % Your name
-\lastupdated
 
 %----------------------------------------------------------------------------------------
 %	SIDEBAR SECTION  -- In the aside, each new line forces a line break
@@ -18,6 +17,7 @@
 \section{Contact}
 +1 (778) 896 9099
 ~
+\href{http://ryanliu6.xyz}{ryanliu6.xyz}
 \href{https://github.com/ryanliu6}{github.com/ryanliu6}
 \href{mailto:dio.ryanliu@gmail.com}{dio.ryanliu@gmail.com}
 \section{Programming Languages}
@@ -87,7 +87,7 @@ Mandarin
   \begin{itemize}[leftmargin=*]
     \item Improved system stability by eliminating uncaught bugs through the implementation of system and unit tests using GoogleTest and GoogleMock
     \item Revised data collection algorithm by reducing density of clusters and increasing total number of collected points to increase accuracy of results
-    \item Sped up overall system performance by more than 10\% by removing layers of abstraction and refactoring legacy code to leverage standard C++11/14 libraries 
+    \item Sped up overall system performance by more than 10\% by removing layers of abstraction and refactoring legacy code to leverage standard C++11/14 libraries
   \end{itemize}}
 %------------------------------------------------
 \entry
@@ -118,7 +118,7 @@ Mandarin
   {\href{https://github.com/ryanliu6/tvm-calculator}{github.com/ryanliu6/tvm-calculator}}
   {\jobtitle{Personal Project - Project was on hiatus from June to October}
   \begin{itemize}[leftmargin=*]
-    \item Developed a RESTful API for calculating accounting ratios and value of money 
+    \item Developed a RESTful API for calculating accounting ratios and value of money
     \item An Electron-React based GUI application is currently in development
   \end{itemize}}
 %------------------------------------------------
