--- a/main.tex
+++ b/main.tex
@@ -25,7 +25,7 @@ C
 C++
 Java
 Python
-Javascript
+JavaScript
 \section{Software Libraries}
 Boost
 OpenCV
@@ -98,7 +98,7 @@ Mandarin
   \begin{itemize}[leftmargin=*]
     \item Designed an innovative serial-based control system in C++ to manage SMART's latest SMART Boards through the implementation of test-driven development
     \item Validated system functionality of latest SMART Boards through an automated test environment implemented in C++ using above control system
-    \item Researched, designed, and tested prototypes of next generation SMART Boards
+    \item Prototyped next generation RFID based education SMART Boards by constructing custom RFID chips and readers in hardware and firmware
   \end{itemize}}
 %------------------------------------------------
 
@@ -114,7 +114,7 @@ Mandarin
 %------------------------------------------------
 \entry
   {04.2018--Present}
-  {TVM-Calculator - Javascript based Acounting Calculator}
+  {TVM-Calculator - Javascript based Accounting Calculator}
   {\href{https://github.com/ryanliu6/tvm-calculator}{github.com/ryanliu6/tvm-calculator}}
   {\jobtitle{Personal Project - Project was on hiatus from June to October}
   \begin{itemize}[leftmargin=*]
